argocd/argo-svc-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-svc-bridge
  namespace: argocd
spec:
  type: ExternalName
  externalName: argocd-server.argocd
