argocd/ingress.yaml
# ngrok Ingress Controller Configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: argocd
spec:
  ingressClassName: ngrok
  rules:
    - host: sloth-beloved-wren.ngrok-free.app
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /atlantis
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
